--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -1,3 +1,8 @@
+:root {
+    --dark-color: rgba(33, 37, 41, 1);
+    --light-color: rgba(248, 249, 250, 1)
+}
+
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -5,6 +10,12 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+body {
+    display: grid;
+    place-items: center;
+    background-color: var(--dark-color);
 }
 
 .button {
