--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -1,8 +1,3 @@
-:root {
-    --dark-color: rgba(33, 37, 41, 1);
-    --light-color: rgba(248, 249, 250, 1)
-}
-
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -59,6 +54,7 @@
 }
 
 #text-box {
+    color: black;
     display: block;
     text-align: center;
 }
@@ -86,4 +82,14 @@
 #editor {
     resize: vertical;
     width: 500px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+table, th, td {
+    border: 1px solid;
+    border-collapse: collapse;
 }
