--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ html {
 
 body {
     background-color: var(--dark-color);
+    display: grid;
+    place-items: center;
 }
 
 @media only screen and (max-width: 720px) {
