--- a/src/Timer.css
+++ b/src/Timer.css
@@ -69,7 +69,7 @@
 
 .button {
     border: none;
-    background-color: rgba(0,0,0,0);
+    background-color: white;
     margin: auto;
     cursor: pointer;
     width: 100%;
