--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,41 @@ nav a {
 .center {
     text-align: center;
 }
+
+.button {
+    border: none;
+    background-color: transparent;
+    margin: auto;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding: 25px 35px 25px 35px;
+    font-size: 20px;
+    font-family: Arial;
+}
+
+.box {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    background-color: dimgray;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px black;
+    margin: 10px;
+}
+
+.grid-container {
+    display: grid;
+    gap: 1px 1px;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
