--- a/src/Timer.css
+++ b/src/Timer.css
@@ -36,6 +36,20 @@
     color: black;
 }
 
+#start-stop {
+    grid-area: 1 / 1 / span 1 / span 1;
+    margin: auto 5px auto 5px;
+    background-color: white;
+    color: black;
+}
+
+#reset {
+    grid-area: 1 / 2 / span 1 / span 1;
+    margin: auto 5px auto 5px;
+    background-color: white;
+    color: black;
+}
+
 #break-length {
     grid-area: 2 / 2 / span 1 / span 1;
     margin: auto 5px auto 5px;
