--- a/src/Timer.css
+++ b/src/Timer.css
@@ -36,7 +36,7 @@
     color: black;
 }
 
-#start-stop {
+#start_stop {
     grid-area: 1 / 1 / span 1 / span 1;
     margin: auto 5px auto 5px;
     background-color: white;
