--- a/src/Timer.css
+++ b/src/Timer.css
@@ -74,5 +74,6 @@
     grid-area: 5 / 1 / span 1 / span 6;
     margin: auto;
     display: grid;
-    grid-template-columns: auto; 
+    grid-template-columns: auto;
+    gap: 1px 1px;
 }
