--- a/src/Timer.css
+++ b/src/Timer.css
@@ -10,42 +10,42 @@
 
 #session-increment {
     grid-area: 2 / 6 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
 
 #session-decrement {
     grid-area: 2 / 4 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
 
 #break-increment {
     grid-area: 2 / 3 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
 
 #break-decrement {
     grid-area: 2 / 1 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
 
 #start_stop {
     grid-area: 1 / 1 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
 
 #reset {
     grid-area: 1 / 2 / span 1 / span 1;
-    margin: auto 5px auto 5px;
+    margin: auto;
     background-color: white;
     color: black;
 }
