--- a/src/Timer.css
+++ b/src/Timer.css
@@ -13,6 +13,7 @@
     margin: 5px auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #session-decrement {
@@ -20,6 +21,7 @@
     margin: 5px auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #break-increment {
@@ -27,6 +29,7 @@
     margin: 5px auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #break-decrement {
@@ -34,6 +37,7 @@
     margin: 5px auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #start_stop {
@@ -41,6 +45,7 @@
     margin: auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #reset {
@@ -48,6 +53,7 @@
     margin: auto;
     background-color: white;
     color: black;
+    border-radius: 10px;
 }
 
 #break-length {
