--- a/src/Timer.css
+++ b/src/Timer.css
@@ -51,6 +51,7 @@
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
+    padding: 3px;
 }
 
 #reset {
@@ -60,6 +61,7 @@
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
+    padding: 3px;
 }
 
 #break-length {
