--- a/src/Timer.css
+++ b/src/Timer.css
@@ -51,7 +51,7 @@
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
-    padding: 3px;
+    padding: 3px 10px 3px 10px;
 }
 
 #reset {
@@ -61,7 +61,7 @@
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
-    padding: 3px;
+    padding: 3px 10px 3px 10px;
 }
 
 #break-length {
