--- a/src/index.css
+++ b/src/index.css
@@ -129,11 +129,11 @@ nav a {
 .box {
     margin-left: auto;
     margin-right: auto;
+    width: auto;
     background-color: dimgray;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 10px black;
-    margin: 10px;
 }
 
 .grid-container {
