--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ nav a {
 }
 
 .box {
-    display: inline-block;
+    display: contents;
     background-color: dimgray;
     padding: 10px;
     border-radius: 10px;
