--- a/src/Timer.css
+++ b/src/Timer.css
@@ -1,16 +1,16 @@
 #break-label {
     grid-area: 1 / 1 / span 1 / span 3;
-    margin: auto;
+    margin: auto 4px auto 4px;
 }
 
 #session-label {
     grid-area: 1 / 4 / span 1 / span 3;
-    margin: auto;
+    margin: auto 4px auto 4px;
 }
 
 #session-increment {
     grid-area: 2 / 6 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
@@ -19,7 +19,7 @@
 
 #session-decrement {
     grid-area: 2 / 4 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
@@ -28,7 +28,7 @@
 
 #break-increment {
     grid-area: 2 / 3 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
@@ -37,7 +37,7 @@
 
 #break-decrement {
     grid-area: 2 / 1 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
@@ -46,7 +46,7 @@
 
 #start_stop {
     grid-area: 1 / 1 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
@@ -56,7 +56,7 @@
 
 #reset {
     grid-area: 1 / 2 / span 1 / span 1;
-    margin: auto;
+    margin: auto 4px auto 4px;
     background-color: white;
     color: black;
     border-radius: 15px;
