--- a/src/Timer.css
+++ b/src/Timer.css
@@ -1,96 +1,129 @@
-#break-label {
+.timer-button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial;
+}
+
+.timer-box {
+    display: inline-block;
+    background-color: dimgray;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px black;
+}
+
+.timer-grid-container {
+    display: grid;
+    gap: 4px 8px;
+}
+
+.timer-unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#timer-break-label {
     grid-area: 1 / 1 / span 1 / span 3;
     margin: auto;
     text-align: center;
 }
 
-#session-label {
+#timer-session-label {
     grid-area: 1 / 4 / span 1 / span 3;
     margin: auto;
     text-align: center;
 }
 
-#session-increment {
+#timer-session-increment {
     grid-area: 2 / 6 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
 }
 
-#session-decrement {
+#timer-session-decrement {
     grid-area: 2 / 4 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
 }
 
-#break-increment {
+#timer-break-increment {
     grid-area: 2 / 3 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
 }
 
-#break-decrement {
+#timer-break-decrement {
     grid-area: 2 / 1 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
 }
 
-#start_stop {
+#timer-start_stop {
     grid-area: 1 / 1 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
     padding: 3px 10px 3px 10px;
 }
 
-#reset {
+#timer-reset {
     grid-area: 1 / 2 / span 1 / span 1;
     margin: auto 2px auto 2px;
-    background-color: white;
+    background-color: var(--text-color);
     color: black;
     border-radius: 15px;
     box-shadow: 1px 2px 5px;
     padding: 3px 10px 3px 10px;
 }
 
-#break-length {
+#timer-break-length {
     grid-area: 2 / 2 / span 1 / span 1;
     margin: auto;
     text-align: center;
 }
 
-#session-length {
+#timer-session-length {
     grid-area: 2 / 5 / span 1 / span 1;
     margin: auto;
     text-align: center;
 }
 
-#timer-label {
+#timer-timer-label {
     grid-area: 3 / 1 / span 1 / span 6;
     margin: auto;
     text-align: center;
 }
 
-#time-left {
+#timer-time-left {
     grid-area: 4 / 1 / span 1 / span 6;
     margin: auto;
     text-align: center;
 }
 
-#start-stop-reset {
+#timer-start-stop-reset {
     grid-area: 5 / 1 / span 1 / span 6;
     margin: auto;
     display: grid;
@@ -98,13 +131,8 @@
     gap: 4px 4px;
 }
 
-#buttonimg {
+#timer-buttonimg {
     max-width: auto;
     max-height: 15px;
     margin: auto;
-}
-
-.grid-container-timer {
-    display: grid;
-    gap: 4px 8px;
 }
