--- a/src/Timer.css
+++ b/src/Timer.css
@@ -7,8 +7,13 @@
 .timer-box {
     display: inline-block;
     background-color: dimgray;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 10px black;
+}
+
+.timer-outer-box {
+    display: inline-block;
 }
 
 .timer-grid-container {
