--- a/src/Timer.css
+++ b/src/Timer.css
@@ -1,3 +1,12 @@
+:root {
+    --dark-color: #212529;
+    --dark2-color: #213242;
+    --medium-color: #5E6A75;
+    --light-color: #3B5875;
+    --light2-color: #9BAEC2;
+    --text-color: #f8f9ff;
+}
+
 .timer-button {
     border: none;
     background-color: transparent;
@@ -6,7 +15,8 @@
 
 .timer-box {
     display: inline-block;
-    background-color: dimgray;
+    background-color: var(--light2-color);
+    ;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 3px 3px 10px black;
