--- a/src/Timer.css
+++ b/src/Timer.css
@@ -15,7 +15,7 @@
 
 .timer-box {
     display: inline-block;
-    background-color: var(--light2-color);
+    background-color: var(--medium-color);
     ;
     padding: 10px;
     border-radius: 10px;
