--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -1,20 +1,66 @@
-.totalString {
-    color: white;
+:root {
+    --dark-color: #212529;
+    --dark2-color: #213242;
+    --medium-color: #5E6A75;
+    --light-color: #3B5875;
+    --light2-color: #9BAEC2;
+    --text-color: #f8f9ff;
+}
+
+.calc-button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial;
+}
+
+.calc-box {
+    display: inline-block;
+    background-color: dimgray;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px black;
+}
+
+.calc-outer-box {
+    display: inline-block;
+}
+
+.calc-grid-container {
+    display: grid;
+    gap: 1px 1px;
+}
+
+.calc-unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.calc-totalString {
+    color: var(--text-color);
     font-family: "Lucida Console", monospace;
     text-align: right;
     margin: auto;
     padding: 5px 6px 3px;
 }
 
-.display-text {
+.calc-display-text {
     font-size: 20px;
     font-family: "Lucida Console", monospace;
-    color: white;
+    color: var(--text-color);
     text-align: right;
     padding: 0px 10px;
 }
 
-.totaldisplay {
+.calc-totaldisplay {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 2;
@@ -22,7 +68,7 @@
     background: black;
 }
 
-.itemdisplay {
+.calc-itemdisplay {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 2;
@@ -30,7 +76,7 @@
     background: black;
 }
 
-.itemac {
+.calc-itemac {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
@@ -38,7 +84,7 @@
     background: crimson;
 }
 
-.itemdivide {
+.calc-itemdivide {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 3;
@@ -46,7 +92,7 @@
     background: darkgray;
 }
 
-.itemtimes {
+.calc-itemtimes {
     grid-column-start: 4;
     grid-column-end: 5;
     grid-row-start: 3;
@@ -54,7 +100,7 @@
     background: darkgray;
 }
 
-.itemminus {
+.calc-itemminus {
     grid-column-start: 4;
     grid-column-end: 5;
     grid-row-start: 4;
@@ -62,7 +108,7 @@
     background: darkgray;
 }
 
-.itemplus {
+.calc-itemplus {
     grid-column-start: 4;
     grid-column-end: 5;
     grid-row-start: 5;
@@ -70,7 +116,7 @@
     background: darkgray;
 }
 
-.itemequals {
+.calc-itemequals {
     grid-column-start: 4;
     grid-column-end: 5;
     grid-row-start: 6;
@@ -78,7 +124,7 @@
     background: darkslateblue;
 }
 
-.item1 {
+.calc-item1 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 6;
@@ -86,7 +132,7 @@
     background: slategray;
 }
 
-.item2 {
+.calc-item2 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 6;
@@ -94,7 +140,7 @@
     background: slategray;
 }
 
-.item3 {
+.calc-item3 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 6;
@@ -102,7 +148,7 @@
     background: slategray;
 }
 
-.item4 {
+.calc-item4 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 5;
@@ -110,7 +156,7 @@
     background: slategray;
 }
 
-.item5 {
+.calc-item5 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 5;
@@ -118,7 +164,7 @@
     background: slategray;
 }
 
-.item6 {
+.calc-item6 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 5;
@@ -126,7 +172,7 @@
     background: slategray;
 }
 
-.item7 {
+.calc-item7 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 4;
@@ -134,7 +180,7 @@
     background: slategray;
 }
 
-.item8 {
+.calc-item8 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 4;
@@ -142,7 +188,7 @@
     background: slategray;
 }
 
-.item9 {
+.calc-item9 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 4;
@@ -150,7 +196,7 @@
     background: slategray;
 }
 
-.item0 {
+.calc-item0 {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 7;
@@ -158,7 +204,7 @@
     background: slategray;
 }
 
-.itemdot {
+.calc-itemdot {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 7;
@@ -166,6 +212,6 @@
     background: slategray;
 }
 
-.buttonpadding {
+.calc-buttonpadding {
     padding: 25px 35px 25px 35px;
 }
