--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -1,13 +1,35 @@
+:root {
+    --dark-color: #212529;
+    --dark2-color: #213242;
+    --medium-color: #5E6A75;
+    --light-color: #3B5875;
+    --light2-color: #9BAEC2;
+    --text-color: #f8f9ff;
+}
+
 .drum-box {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: auto;
-    background-color: seashell;
+    background-color: var(--medium-color);
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 5px 7px 20px rosybrown;
+    box-shadow: 5px 7px 20px var(--dark-color2);
     margin: 10px;
+}
+
+.drum-unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.drum-outer-box {
+    display: inline-block;
 }
 
 .drum-pad {
@@ -25,7 +47,7 @@
     box-shadow: 1px 2px 5px rosybrown;
 }
 
-.row {
+.drum-row {
     display: block;
     margin-left: auto;
     margin-right: auto;
