--- a/src/Timer.css
+++ b/src/Timer.css
@@ -16,10 +16,9 @@
 .timer-box {
     display: inline-block;
     background-color: var(--medium-color);
-    ;
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 3px 3px 10px black;
+    box-shadow: 3px 3px 10px var(--dark-color2);
 }
 
 .timer-outer-box {
