--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -44,7 +44,7 @@
     margin: 4px;
     cursor: pointer;
     border-radius: 15px;
-    box-shadow: 1px 2px 5px rosybrown;
+    box-shadow: 1px 2px 5px var(--dark-color2);
 }
 
 .drum-row {
