--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -33,7 +33,7 @@
 }
 
 .drum-pad {
-    background-color: rosybrown;
+    background-color: var(--dark2-color);
     border: none;
     color: white;
     padding: 30px 30px;
@@ -44,7 +44,7 @@
     margin: 4px;
     cursor: pointer;
     border-radius: 15px;
-    box-shadow: 1px 2px 5px var(--dark-color2);
+    box-shadow: 1px 2px 5px black;
 }
 
 .drum-row {
