--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -33,9 +33,9 @@
 }
 
 .drum-pad {
-    background-color: var(--dark2-color);
+    background-color: var(--dark-color);
     border: none;
-    color: white;
+    color: var(--text-color);
     padding: 30px 30px;
     text-align: center;
     text-decoration: none;
@@ -54,7 +54,7 @@
 }
 
 #text-box {
-    color: black;
+    color: var(--text-color);
     display: block;
     text-align: center;
 }
