--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -33,7 +33,7 @@
 }
 
 .drum-pad {
-    background-color: darkgray;
+    background-color: rosybrown;
     border: none;
     color: var(--text-color);
     padding: 30px 30px;
