--- a/src/Markdown.css
+++ b/src/Markdown.css
@@ -1,26 +1,36 @@
+:root {
+    --dark-color: #212529;
+    --dark2-color: #213242;
+    --medium-color: #5E6A75;
+    --light-color: #3B5875;
+    --light2-color: #9BAEC2;
+    --text-color: #f8f9ff;
+}
+
 #markdown-box1 {
-  width: 507px;
-  margin: auto;
-  overflow: auto;
-  h1 {
+    width: 507px;
+    margin: auto;
+    overflow: auto;
+    background-color: var(--medium-color);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 7px 20px black;
+    margin: 10px;
+}
+
+h1#markdown-box1 {
     font-size: 20px;
-  };
-  background-color: grey;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 5px 7px 20px black;
-  margin: 10px;
 }
 
 #markdown-box2 {
-  width: 700px;
-  margin: auto;
-  overflow: auto;
-  background-color: grey;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 5px 7px 20px black;
-  margin: 10px;
+    width: 700px;
+    margin: auto;
+    overflow: auto;
+    background-color: var(--medium-color);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 7px 20px black;
+    margin: 10px;
 }
 
 #markdown-preview {
@@ -29,10 +39,10 @@
 }
 
 #markdown-parent {
-  width: 640px;
-  margin: auto;
-  place-items: center;
-  background-color: grey;
+    width: 640px;
+    margin: auto;
+    place-items: center;
+    background-color: var(--medium-color);
 }
 .markdown-row {
   display: grid;
