--- a/src/Markdown.css
+++ b/src/Markdown.css
@@ -33,6 +33,10 @@ h1#markdown-box1 {
     margin: 10px;
 }
 
+img#markdown-box2 {
+    width: auto;
+}
+
 #markdown-preview {
   text-align: left;
   word-wrap: break-word;
