--- a/src/Quote.css
+++ b/src/Quote.css
@@ -44,12 +44,12 @@ h1.quote-box {
 .quote-button {
     background-color: var(--dark2-color);
     border: none;
-    color: white;
+    color: var(--text-color);
     padding: 7px 7px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 14px;
     margin: 4px;
     cursor: pointer;
     border-radius: 15px;
