--- a/src/Quote.css
+++ b/src/Quote.css
@@ -31,6 +31,14 @@ h1.quote-box {
   margin-right: auto;
 }
 
+#quote-text-text {
+    font-size: 14px;
+}
+
+#quoate-author-text {
+    font-size: 16px;
+}
+
 .quote-center-align {
   margin-left: auto;
   margin-right: auto;
