--- a/src/Markdown.css
+++ b/src/Markdown.css
@@ -26,7 +26,7 @@ h1#markdown-box1 {
     width: 700px;
     margin: auto;
     overflow: auto;
-    background-color: var(--medium-color);
+    background-color: transparent;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 5px 7px 20px black;
@@ -36,6 +36,10 @@ h1#markdown-box1 {
 #markdown-preview {
   text-align: left;
   word-wrap: break-word;
+}
+
+#markdown-preview img {
+    width: 100%;
 }
 
 #markdown-parent {
