--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --light-color: #3B5875;
     --light2-color: #9BAEC2;
     --text-color: #f8f9ff;
+    font-size: 16px;
 }
 
 * {
@@ -17,7 +18,7 @@ html {
 }
 
 body {
-    background-color: var(--dark-color);
+    background-color: var(--light-color);
     display: grid;
     place-items: center;
 }
@@ -39,8 +40,7 @@ a {
 }
 
 a:hover {
-    background-color: var(--light-color);
-    color: black;
+    color: var(--light2-color);
 }
 
 .navbar {
@@ -102,28 +102,8 @@ nav a {
     text-align: center;
 }
 
-.button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 20px;
-    font-family: Arial;
-}
 
-.box {
-    display: inline-block;
-    background-color: dimgray;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 3px 3px 10px black;
-}
 
-.outer-box {
-    display: inline-block;
-}
 
 .grid-container {
     display: grid;
