--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-color: var(--light-color);
+    background-color: var(--dark-color);
     display: grid;
     place-items: center;
 }
