--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     --light-color: #3B5875;
     --light2-color: #9BAEC2;
     --text-color: #f8f9ff;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 * {
@@ -23,16 +23,24 @@ body {
     place-items: center;
 }
 
-#about-me img {
-    width: 20vw;
-}
-
 @media only screen and (max-width: 720px) {
-    
+    body {
+        font-size: 2rem;
+    }
+
+    #about-me img {
+        width: 100px;
+    }
 }
 
 @media only screen and (min-width: 720px) {
-
+    body {
+        font-size: 1rem;
+    }
+    
+    #about-me img {
+        width: 250px;
+    }
 }
 
 a {
