--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     --light-color: #3B5875;
     --light2-color: #9BAEC2;
     --text-color: #f8f9ff;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 * {
@@ -25,7 +25,7 @@ body {
 
 @media only screen and (max-width: 720px) {
     body {
-        font-size: 1rem;
+        font-size: 62.5%;
     }
 
     #about-me img {
@@ -35,7 +35,7 @@ body {
 
 @media only screen and (min-width: 720px) {
     body {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
     
     #about-me img {
