--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 
 @media only screen and (max-width: 720px) {
     body {
-        font-size: 62.5%;
+        font-size: 0.75rem;
     }
 
     #about-me img {
@@ -37,7 +37,12 @@ body {
     body {
         font-size: 1rem;
     }
-    
+    h1 { font-size: 2rem; }
+    h2 { font-size: 1.5rem; }
+    h3 { font-size: 1.17rem; }
+    h4 { font-size: 1rem; }
+    h5 { font-size: 0.83rem; }
+    h6 { font-size: 0.67rem; }
     #about-me img {
         width: 250px;
     }
