--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     --light-color: #3B5875;
     --light2-color: #9BAEC2;
     --text-color: #f8f9ff;
-    font-size: 16px;
+    font-size: 62.5%;
 }
 
 * {
