--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,15 @@ h6 {
 @media only screen and (max-width: 720px) {
 
     #about-me img {
-        width: 100px;
+        width: 50vw;
+        max-width: 125px;
     }
 }
 
 @media only screen and (min-width: 720px) {
 
     #about-me img {
-        width: 33vw;
+        width: 50vw;
         max-width: 250px;
     }
 }
