--- a/src/index.css
+++ b/src/index.css
@@ -14,34 +14,55 @@
 
 html {
     scroll-behavior: smooth;
-    font-size: 16px;
-}
-
-@media screen and (min-width: 320px) {
-    html {
-        font-size: calc(16px + 6 * ((100vw - 320px) / 680));
-    }
-    #about-me img {
-        width: 50vw;
-        max-width: 125px;
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    html {
-        font-size: 22px;
-    }
-    #about-me img {
-        width: 50vw;
-        max-width: 250px;
-    }
+    font-size: 62.5%;
 }
 
 body {
     background-color: var(--dark-color);
     display: grid;
     place-items: center;
+    font-size: 1.375rem;
     height: 100vh;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.17rem;
+}
+
+h4 {
+    font-size: 1rem;
+}
+
+h5 {
+    font-size: 0.83rem;
+}
+
+h6 {
+    font-size: 0.67rem;
+}
+
+@media only screen and (max-width: 720px) {
+
+    #about-me img {
+        width: 50vw;
+        max-width: 125px;
+    }
+}
+
+@media only screen and (min-width: 720px) {
+
+    #about-me img {
+        width: 50vw;
+        max-width: 250px;
+    }
 }
 
 a {
@@ -110,6 +131,9 @@ nav a {
 .center {
     text-align: center;
 }
+
+
+
 
 .grid-container {
     display: grid;
