--- a/src/index.css
+++ b/src/index.css
@@ -49,12 +49,14 @@ h6 {
     font-size: 0.67rem;
 }
 
+#about-me img {
+    width: clamp(125px, 2vw,250px);
+    max-width: 125px;
+}
+
 @media only screen and (max-width: 720px) {
 
-    #about-me img {
-        width: 50vw;
-        max-width: 125px;
-    }
+    
 }
 
 @media only screen and (min-width: 720px) {
