--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ h6 {
 }
 
 #about-me img {
-    width: clamp(125px, 30vw, 250px);
+    width: clamp(125px, 185px, 250px);
     max-width: 125px;
     border-radius: 50%;
 }
