--- a/src/index.css
+++ b/src/index.css
@@ -27,31 +27,31 @@ body {
 }
 
 h1 {
-    font-size: clamp(1.5rem, 2vw, 2.25rem);
+    font-size: clamp(1.5rem, 3.375vw, 2.25rem);
 }
 
 h2 {
-    font-size: clamp(1.25rem, 2vw, 1.875rem);
+    font-size: clamp(1.25rem, 2.81vw, 1.875rem);
 }
 
 h3 {
-    font-size: clamp(1rem, 2vw, 1.5rem);
+    font-size: clamp(1rem, 2.25vw, 1.5rem);
 }
 
 h4 {
-    font-size: clamp(0.875rem, 2vw, 1.25rem);
+    font-size: clamp(0.875rem, 1.875vw, 1.25rem);
 }
 
 h5 {
-    font-size: clamp(0.75rem, 2vw, 1.125rem);
+    font-size: clamp(0.75rem, 1.68vw, 1.125rem);
 }
 
 h6 {
-    font-size: clamp(0.675rem, 2vw, 1rem);
+    font-size: clamp(0.675rem, 1.5vw, 1rem);
 }
 
 #about-me img {
-    width: clamp(125px, 300px, 500px);
+    width: clamp(125px, 500px);
     max-width: 125px;
     border-radius: 50%;
 }
