--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 * {
     color: var(--text-color);
-    font-family: verdana, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 html {
