--- a/src/index.css
+++ b/src/index.css
@@ -51,9 +51,6 @@ h6 {
 }
 
 #about-me img {
-    width: 50%;
-    max-width: 250px;
-    height: auto;
     border-radius: 50%;
 }
 
@@ -91,7 +88,7 @@ nav a {
 
 
 .about-me-sub {
-    display: flex;
+    display: grid;
     align-items: center;
     justify-content: center;
 }
@@ -100,7 +97,12 @@ nav a {
     margin: 1rem;
 }
 
+.about-me-div:nth-of-type(1) {
+    grid-area: 1 / 1 / span 1 / span 1;
+}
+
 .about-me-div:nth-of-type(2) {
+    grid-area: 1 / 2 / span 1 / span 1;
     display: grid;
 }
 
