--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,6 @@ h6 {
 }
 
 #about-me img {
-    width: clamp(125px, 100%, 250px);
     border-radius: 50%;
 }
 
@@ -89,7 +88,7 @@ nav a {
 
 
 .about-me-sub {
-    display: grid;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
@@ -98,12 +97,7 @@ nav a {
     margin: 1rem;
 }
 
-.about-me-div:nth-of-type(1) {
-    grid-area: 1 / 1 / span 1 / span 1;
-}
-
 .about-me-div:nth-of-type(2) {
-    grid-area: 1 / 2 / span 1 / span 1;
     display: grid;
 }
 
