--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,29 @@ nav a {
     -ms-user-select: none;
     user-select: none;
 }
+
+nav.navbar a:before, nav.navbar a:after {
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background: #FFF;
+    content: "";
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+nav.navbar a:before {
+    top: 0px;
+    transform: translateY(10px);
+}
+
+nav.navbar a:after {
+    bottom: 0px;
+    transform: translateY(-10px);
+}
+
+nav.navbar a:hover:before, nav.navbar a:hover:after {
+    opacity: 1;
+    transform: translateY(0px);
+}
