--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,12 @@ nav a {
     user-select: none;
 }
 
+nav.navbar {
+    margin: 0 auto;
+    padding: 10em 3em;
+    text-align: center;
+}
+
 nav.navbar a:before, nav.navbar a:after {
     position: absolute;
     left: 0px;
