--- a/src/index.css
+++ b/src/index.css
@@ -124,14 +124,14 @@ a:hover {
     user-select: none;
 }
 
-.navbar {
+/*.navbar {
     position: fixed;
     overflow: hidden;
     width: 100%;
     top: 0.5rem;
     text-align: right;
     right: 1rem;
-}
+}*/
 
 nav a {
     margin: 0.5rem;
@@ -143,6 +143,7 @@ nav.navbar a:before, nav.navbar a:after {
     width: 100%;
     height: 2px;
     background: #FFF;
+    content: "";
     opacity: 0;
     transition: all 0.3s;
 }
