--- a/src/index.css
+++ b/src/index.css
@@ -124,19 +124,16 @@ a:hover {
     user-select: none;
 }
 
-/*.navbar {
+navbar {
     position: fixed;
     overflow: hidden;
     width: 100%;
     top: 0.5rem;
     text-align: right;
     right: 1rem;
-}*/
+}
 
 div.navborders a {
-    top: 0.5rem;
-    text-align: right;
-    right: 1rem;
     color: #FFF;
     text-decoration: none;
     margin: 0px 10px;
