--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,8 @@ navbar {
 div.navborders a {
     color: #FFF;
     text-decoration: none;
-    position: relative;
+    margin: 0px 10px;
+    padding: 10px 10px;
     z-index: 0;
     cursor: pointer;
 }
