--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ a:hover {
 }
 
 .navbar {
-    position: fixed;
+    position: relative;
     overflow: hidden;
     width: 100%;
     top: 0.5rem;
