--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
     place-items: center;
     font-size: clamp(0.675rem, 1.5vw, 1rem);
     height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
 
 h1 {
