--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 }
 
 .app {
-    width: 100%;
+    width: 100vw;
+    height: 100vw;
 }
 
 * {
@@ -27,8 +28,8 @@ body {
     display: grid;
     place-items: center;
     font-size: clamp(0.675rem, 1.5vw, 1rem);
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 h1 {
