--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
     font-size: clamp(0.675rem, 1.5vw, 1rem);
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow: auto;
 }
 
 h1 {
