--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,18 @@ a:hover {
     display: grid;
 }
 
+#profile-link:nth-of-type(1) {
+    grid-area: 1 / 1 / span 1 / span 1;
+}
+
+#profile-link:nth-of-type(2) {
+    grid-area: 1 / 2 / span 1 / span 1;
+}
+
+#profile-link:nth-of-type(3) {
+    grid-area: 1 / 3 / span 1 / span 1;
+}
+
 .about-me-div:nth-of-type(2) a {
     margin: 1rem;
 }
