--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ h6 {
 #about-me {
     height: auto;
     padding: 1rem;
+    background: url('https://github.com/genevill/web-server/blob/master/src/LostGalaxies%20Header%20Name.jpg')
 }
 
 a {
