--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ h6 {
 #about-me {
     height: auto;
     padding: 1rem;
-    background: url('https://github.com/genevill/web-server/blob/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
 }
 
 a {
