--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ h6 {
     height: auto;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
+    background-size: 100% auto;
 }
 
 a {
