--- a/src/index.css
+++ b/src/index.css
@@ -60,8 +60,6 @@ h6 {
 #about-me {
     height: auto;
     padding: 1rem;
-    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
-    background-size: 100% auto;
 }
 
 a {
@@ -85,13 +83,12 @@ a:hover {
 
 .about-me-div {
     margin: 1rem;
-}
-
-.about-me-div:nth-of-type(1) {
     grid-area: 1 / 1 / span 1 / span 1;
+    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
+    background-size: 100% auto;
 }
 
-.about-me-div:nth-of-type(2) {
+.about-me-links {
     grid-area: 2 / 1 / span 1 / span 1;
     display: grid;
 }
