--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ h6 {
     height: auto;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
-    background-size: 100% auto;
+    background-size: 100% 2304px;
 }
 
 a {
