--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,8 @@ h6 {
 #about-me {
     height: auto;
     padding: 1rem;
-    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center center fixed;
-    background-size: 100% 2304px;
+    background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
+    background-size: 100% auto;
 }
 
 a {
