--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,6 @@ h6 {
     border-radius: 50%;
 }
 
-.about-me-sub {
-}
-
 #about-me {
     height: auto;
     padding: 1rem;
@@ -92,6 +89,7 @@ a:hover {
 
 .about-me-div:nth-of-type(1) {
     grid-area: 1 / 1 / span 1 / span 1;
+    height: 50rem;
 }
 
 .about-me-div:nth-of-type(2) {
