--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,7 @@ a:hover {
 
 .about-me-div:nth-of-type(1) {
     grid-area: 1 / 1 / span 1 / span 1;
-    height: 23rem;
+    height: 24rem;
 }
 
 .about-me-div:nth-of-type(2) {
@@ -143,6 +143,7 @@ a:hover {
 
 .navbar {
     width: 100%;
+    height: 100%;
     top: 0.5rem;
     text-align: right;
     right: 1rem;
