--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ a:hover {
 
 .navbar {
     width: 100%;
-    height: 100%;
+    height: 1rem;
     top: 0.5rem;
     text-align: right;
     right: 1rem;
