--- a/src/index.css
+++ b/src/index.css
@@ -147,7 +147,7 @@ a:hover {
     top: 0.5rem;
     text-align: right;
     right: 1rem;
-    font-size: 125%;
+    font-size: 1.25rem;
 }
 
 div.navborders a {
