--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ h6 {
     border-radius: 50%;
 }
 
-#about-me {
+#background {
     height: auto;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
