--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ h6 {
 }
 
 #background {
-    height: auto;
+    height: 100%;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
     background-size: 100% 100%;
