--- a/src/index.css
+++ b/src/index.css
@@ -195,3 +195,18 @@ div.navborders a:hover:before, div.navborders a:hover:after {
     align-items: center;
     justify-content: center;
 }
+
+.switcher-button {
+    background-color: var(--dark2-color);
+    border: none;
+    color: var(--text-color);
+    padding: 30px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px;
+    cursor: pointer;
+    border-radius: 15px;
+    box-shadow: 1px 2px 5px black;
+}
