--- a/src/index.css
+++ b/src/index.css
@@ -204,11 +204,10 @@ div.navborders a:hover:before, div.navborders a:hover:after {
     background-color: var(--dark2-color);
     border: none;
     color: var(--text-color);
-    padding: 30px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1rem;
     margin: 4px;
     cursor: pointer;
     border-radius: 15px;
