--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ div.navborders a:hover:before, div.navborders a:hover:after {
 }
 
 #projects {
-    width: auto;
+    width: 100vw;
     padding: 30px;
 }
 
