--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@ div.navborders a:hover:before, div.navborders a:hover:after {
 #projects {
     width: 100vw;
     padding: 30px;
-    position: relative;
+    box-sizing: border-box;
 }
 
 .switcher-button {
