--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ div.navborders a:hover:before, div.navborders a:hover:after {
 }
 
 #projects-center {
-    width: inherit;
+    width: 100%;
     padding: 30px;
     box-sizing: border-box;
 }
