--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ h6 {
     height: auto;
     padding: 1rem;
     background: url('https://raw.githubusercontent.com/genevill/web-server/master/src/LostGalaxies%20Header%20Name.jpg') no-repeat center top fixed;
-    background-size: 100% auto;
+    background-size: 1430px 804px;
 }
 
 a {
